--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-<meta http-equiv="Refresh" content="0; url='https://www.youtube.com/channel/UCUD8YFRbd_f3syw9si5ga1w'" />
+coming
 </body>
 </html>
